--- a/src/main/resources/templates/form/addForm.html
+++ b/src/main/resources/templates/form/addForm.html
@@ -29,10 +29,20 @@
         </div>
         <div>
             <label for="quantity">수량</label>
-            <input type="text" id="quantity" th:field="*{quantity}"class="form-control" placeholder="수량을 입력하세요">
+            <input type="text" id="quantity" th:field="*{quantity}" class="form-control" placeholder="수량을 입력하세요">
         </div>
 
         <hr class="my-4">
+
+        <!-- single checkbox -->
+        <div>판매 여부</div>
+        <div>
+            <div class="form-check">
+                <input type="checkbox" id="open" name="open" class="form-check-input">
+                <input type="hidden" name="_open" value="on"/> <!-- 히든 필드 추가 -->
+                <label for="open" class="form-check-label">판매 오픈</label>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col">
@@ -42,7 +52,8 @@
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='items.html'"
                         th:onclick="|location.href='@{/form/items}'|"
-                        type="button">취소</button>
+                        type="button">취소
+                </button>
             </div>
         </div>
 
